src/test/ui/lub-glb/old-lub-glb-object.nll.stderr
error: higher-ranked subtype error
  --> $DIR/old-lub-glb-object.rs:10:14
   |
LL |         _ => y,
   |              ^

error: higher-ranked subtype error
  --> $DIR/old-lub-glb-object.rs:10:14
   |
LL |         _ => y,
   |              ^

error: aborting due to 2 previous errors

